correct spelling and grammar

--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
             <h2>Pokédex</h2>
             <p> 
               A small, responsive application that loads data from an external (Pokemon) API, allowing users to retrieve specific 
-              information pertaining to each Pokemon, including their height and image. All users have to do is click the button with 
+              information about each Pokemon, including their height and image. All users have to do is click the button with 
               the name of the pokemon they wish to research and a modal will be opened that reveals these details.
             </p>
             <ul id="bulleted-list">
@@ -66,7 +66,7 @@
           <div class="grid__item" id="project-two">
             <h2>myfavfilmz-API</h2>
             <p>
-              A REST API that serves the client-side of the project by connecting it to an externally hosted database. This allows movie 
+              A REST API that serves the client side of the project by connecting it to an externally hosted database. This allows movie 
               fans to, among other things, create accounts, log in, view movie information and create a list of their favorites.
             </p>
             <ul id="bulleted-list">
@@ -90,7 +90,7 @@
             <p>
               The React version of my Single Page Application’s client that exists to allow movie fans the ability to register for an 
               account and create a list of their favorite movies. Users are also able to find out more about these favorite movies, 
-              such as details about a movie's genre, director and score on Rotten Tomatoes.
+              such as details about a movie's genre, director, and score on Rotten Tomatoes.
             </p>
             <ul id="bulleted-list">
               Technologies Used:
@@ -114,9 +114,9 @@
           <div class="grid__item" id="project-four">
             <h2>Meet App</h2>
             <p>
-              Meet App provides users with a lists of events in different cities, as well as useful details about those events. Users are able to 
-              filter events by location, determine the number of events that they with to see on their page, and add a shortcut to their phone for 
-              mobile, offline use.
+              Meet App provides users with a list of events in different cities, as well as useful details about those events. Users can filter 
+              events by location, determine the number of events that they wish to see on their page and add a shortcut to their phone for 
+              mobile/offline use.
             </p>
             <ul id="bulleted-list">
               Technologies Used:
@@ -143,7 +143,7 @@
           <div class="grid__item" id="project-five">
             <h2>WeChat</h2>
             <p>
-              WeChat exists to allow its users the ability to instantly chat with the ones they love, taking and sending pictures, as 
+              WeChat exists to allow its users the ability to instantly chat with the ones they love, take and send pictures, as 
               well as their current location.
             </p>
             <ul id="bulleted-list">
@@ -157,14 +157,14 @@
               <a href="img/wechat_bigimg.png" class="MagicThumb"><img src="img/wechat_img.png" style="height: 100%; width: 100%; object-fit: contain;" class="thumbnail" alt="WeChat Project Image" /></a>
             </div>
             <div class="buttons">
-              <a type="button" class="github__button_2" href="https://vimeo.com/656415117" target="_blank" rel="noopener noreferrer">See conversation between my phone and the Android Emulator</a>
+              <a type="button" class="github__button_2" href="https://vimeo.com/656415117" target="_blank" rel="noopener noreferrer">See the conversation between my phone and the Android Emulator</a>
               <a type="button" class="github__button" href="https://github.com/dagrimb/WeChat" target="_blank" rel="noopener noreferrer">See Project Repository on Github</a>
             </div>
           </div>
           <div class="grid__item" id="project-six">
             <h2>myfavfilmz-Angular-client</h2>
             <p>
-              The Angular version of my Single Page Application’s client that exists to allow movie fans the ability to register for an 
+              The Angular version of my Single Page Application’s client exists to allow movie fans the ability to register for an 
               account and create a list of their favorite movies. Users are also able to find out more about these favorite movies, 
               such as details about a movie's genre, director and score on Rotten Tomatoes.
             </p>
