edited and reformatted skills section

--- a/index.html
+++ b/index.html
@@ -45,44 +45,14 @@
         </div>
         <div class="main-about">
           <div class="profile_about">
-            <h2>Skills and Experience</h2>
-            <p>*Note: All skills (unless otherwise noted) are in a non-professional/extra-circular environment</p>
-              <table class="skills">
-                <thead>
-                  <tr>
-                    <td>Skills</td>
-                    <td>Years of Experience</td>
-                    <td>Level of Experience</td>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>HTML</td>
-                    <td>3</td>
-                    <td>Beginner-Intermediate</td>
-                  </tr>
-                  <tr>
-                    <td>CSS</td>
-                    <td>3</td>
-                    <td>Beginner-Intermediate</td>
-                  </tr>
-                  <tr>
-                    <td>JavaScript</td>
-                    <td>1</td>
-                    <td>Beginner</td>
-                  </tr>
-                  <tr>
-                    <td>React</td>
-                    <td>1</td>
-                    <td>Beginner</td>
-                  </tr>
-                  <tr>
-                    <td>Angular</td>
-                    <td>1</td>
-                    <td>Beginner</td>
-                  </tr>
-                </tbody>
-              </table><br /><br />
+            <h2>Skills</h2>
+              <ul id="bulleted-list">
+                <li>HTML/CSS and Responsive Design</li>
+                <li>JavaScript and JavaScript Technologies (Express, React, Angular, Node, Jest) Non-Relational Databases (Mongo)</li>
+                <li>Git and GitHub</li>
+                <li>Heroku for application hosting</li>
+                <li>Hosting serverless functions on AWS Lambda</li>
+              </ul><br /><br />
               <h2>About Me</h2>
                 <p>
                   Before late 2020, I worked in the accounts receivable department of a hospital in the Seattle area for a decade and a half. Shortly 
