update with responsive stylings

--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
         </div>
         <div class="main-about">
           <div class="profile_about">
-            <h2>Skills</h2>
+            <h2>My Skills</h2>
               <ul id="bulleted-list">
                 <li>HTML/CSS and Responsive Design</li>
-                <li>JavaScript and JavaScript Technologies (Express, React, Angular, Node, Jest) Non-Relational Databases (Mongo)</li>
+                <li>JavaScript and JavaScript Technologies (Express, React, Angular, Node, Jest)</li>
+                <li>Non-Relational Databases (Mongo)</li>
                 <li>Git and GitHub</li>
                 <li>Heroku for application hosting</li>
                 <li>Hosting serverless functions on AWS Lambda</li>
-              </ul><br /><br />
+              </ul>
               <h2>About Me</h2>
                 <p>
                   Before late 2020, I worked in the accounts receivable department of a hospital in the Seattle area for a decade and a half. Shortly 
