--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
       <div class="profile">
         <div class="portrait">
-          <img src="img/david-grimberg.jpg" class="profile__portrait" alt="David Grimberg Portrait">
+          <img src="img/david_grimberg.jpg" class="profile__portrait" alt="David Grimberg Portrait">
           <div class="profile__welcome">
             <h1>Hello World!</h1>
             <h3>My name is David Grimberg.</h3>
